Fixed some basic things in on the homepage and menu bar on the top.

--- a/eSportsTracker/Views/Home/Index.cshtml
+++ b/eSportsTracker/Views/Home/Index.cshtml
@@ -5,6 +5,9 @@
 <h1>eSports Tracker</h1>
 
 <div>
-    
+    <p>This is a super cool database for tracking data from different eSports games.
+        
+        We need to add more here.
+    </p>
 </div>
 
