--- a/eSportsTracker/Views/VideoGames/Index.cshtml
+++ b/eSportsTracker/Views/VideoGames/Index.cshtml
@@ -12,10 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            Name
+            @Html.DisplayNameFor(model => model.GameName)
         </th>
         <th>
-            Date Released
+            @Html.DisplayNameFor(model => model.Released)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Genre)
