--- a/eSportsTracker/Views/Players/Index.cshtml
+++ b/eSportsTracker/Views/Players/Index.cshtml
@@ -7,7 +7,9 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @if (Session["LoggedIn"] != null)
+    {
+    @Html.ActionLink("Create New", "Create")}
 </p>
 <table class="table">
     <tr>
@@ -41,9 +43,15 @@
             @Html.DisplayFor(modelItem => item.FName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PlayerID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PlayerID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PlayerID })
+            @{
+            if (Session["LoggedIn"] != null)
+            {
+                @Html.ActionLink("Edit", "Edit", new { id = item.PlayerID }) <text>|</text>
+                @Html.ActionLink("Details", "Details", new { id = item.PlayerID }) <text>|</text>
+                @Html.ActionLink("Delete", "Delete", new { id = item.PlayerID })
+            }
+
+            }
         </td>
     </tr>
 }
