Added the ability for error messages to be specified.

--- a/eSportsTracker/Views/Shared/_Layout.cshtml
+++ b/eSportsTracker/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
 
                 <div class="navbar-brand" style="float:right">@val</div>
             </div>
+    <div style="color:red">@ViewBag.Error</div>
         </div>
     </div>
     <div class="container body-content">
