added matches controller and added search to players controller

--- a/eSportsTracker/Views/Players/Index.cshtml
+++ b/eSportsTracker/Views/Players/Index.cshtml
@@ -11,6 +11,14 @@
     {
     @Html.ActionLink("Create New", "Create")}
 </p>
+
+<form>
+    <p>
+        Handle: <input type="text" name="SearchString">
+        <input type="submit" value="Filter" />
+    </p>
+</form>
+
 <table class="table">
     <tr>
         <th>
