--- a/eSportsTracker/Views/Shared/_Layout.cshtml
+++ b/eSportsTracker/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                     <li>@Html.ActionLink("Players", "Index", "Players")</li>
                     <li>@Html.ActionLink("Video Games", "Index", "VideoGames")</li>
                     <li>@Html.ActionLink("Organizations", "Index", "Organizations")</li>
+                    <li>@Html.ActionLink("Matches","Index","Matches")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
