--- a/eSportsTracker/Views/Shared/_Layout.cshtml
+++ b/eSportsTracker/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Players", "Index", "Players")</li>
+                    <li>@Html.ActionLink("Teams", "Index", "Teams")</li>
                     <li>@Html.ActionLink("Video Games", "Index", "VideoGames")</li>
                     <li>@Html.ActionLink("Organizations", "Index", "Organizations")</li>
                     <li>@Html.ActionLink("Matches","Index","Matches")</li>
