--- a/eSportsTracker/Views/Shared/_Layout.cshtml
+++ b/eSportsTracker/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li>@Html.ActionLink("Video Games", "Index", "VideoGames")</li>
                     <li>@Html.ActionLink("Organizations", "Index", "Organizations")</li>
                     <li>@Html.ActionLink("Matches","Index","Matches")</li>
+                    <li>@Html.ActionLink("Tournament","Index","TournamentDetails")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
