Added ID field for admins, added image to home page, fixed column names, and fixed negative players being added to teams

--- a/eSportsTracker/Views/Home/Index.cshtml
+++ b/eSportsTracker/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <div>
     <p>This is a super cool database for tracking data from different eSports games.
         
-        We need to add more here.
+        <img src="~/Content/esports-980x620.jpg" alt="eSports Arena" />
     </p>
 </div>
 
