--- a/eSportsTracker/Views/Matches/Index.cshtml
+++ b/eSportsTracker/Views/Matches/Index.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayNameFor(model => model.Loser)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TournamentName)
+            Tournament Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.GameName)
+            Game Name
         </th>
     </tr>
 
