--- a/eSportsTracker/Views/Organizations/Index.cshtml
+++ b/eSportsTracker/Views/Organizations/Index.cshtml
@@ -13,24 +13,36 @@
 </p>
 <table class="table">
     <tr>
+        @{if (Session["LoggedIn"] != null)
+        {
+            <th>
+                @Html.DisplayNameFor(model => model.OrgID)
+            </th>
+        }}
         <th>
-            @Html.DisplayNameFor(model => model.OrgName)
+            Name
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        @{if (Session["LoggedIn"] != null)
+        {
+            <td>
+                @Html.DisplayFor(modelItem => item.OrgID)
+            </td>
+        }}
         <td>
             @Html.DisplayFor(modelItem => item.OrgName)
         </td>
         <td>
             @{ if (Session["LoggedIn"] != null)
-               { 
-                    @Html.ActionLink("Edit", "Edit", new { id = item.OrgID }) <text>|</text>
-                    @Html.ActionLink("Details", "Details", new { id = item.OrgID }) <text>|</text>
-                    @Html.ActionLink("Delete", "Delete", new { id = item.OrgID })
-               }
+            {
+                @Html.ActionLink("Edit", "Edit", new { id = item.OrgID }) <text>|</text>
+                @Html.ActionLink("Details", "Details", new { id = item.OrgID }) <text>|</text>
+                @Html.ActionLink("Delete", "Delete", new { id = item.OrgID })
+        }
             }
         </td>
     </tr>
