--- a/eSportsTracker/Views/Players/Index.cshtml
+++ b/eSportsTracker/Views/Players/Index.cshtml
@@ -21,23 +21,35 @@
 
 <table class="table">
     <tr>
+        @{if (Session["LoggedIn"] != null)
+        {
+            <th>
+                @Html.DisplayNameFor(model => model.PlayerID)
+            </th>
+        }}
         <th>
             @Html.DisplayNameFor(model => model.Handle)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DOB)
+            Date of Birth
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LName)
+            First Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FName)
+            Last Name
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        @{if (Session["LoggedIn"] != null)
+        {
+            <td>
+                @Html.DisplayFor(modelItem => item.PlayerID)
+            </td>
+        }}
         <td>
             @Html.DisplayFor(modelItem => item.Handle)
         </td>
@@ -45,10 +57,10 @@
             @Html.DisplayFor(modelItem => item.DOB)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.LName)
+            @Html.DisplayFor(modelItem => item.FName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.FName)
+            @Html.DisplayFor(modelItem => item.LName)
         </td>
         <td>
             @{
@@ -57,7 +69,7 @@
                 @Html.ActionLink("Edit", "Edit", new { id = item.PlayerID }) <text>|</text>
                 @Html.ActionLink("Details", "Details", new { id = item.PlayerID }) <text>|</text>
                 @Html.ActionLink("Delete", "Delete", new { id = item.PlayerID })
-            }
+        }
 
             }
         </td>
