--- a/eSportsTracker/Views/Teams/Index.cshtml
+++ b/eSportsTracker/Views/Teams/Index.cshtml
@@ -13,17 +13,29 @@
 </p>
 <table class="table">
     <tr>
+        @{if (Session["LoggedIn"] != null)
+        {
+            <th>
+                @Html.DisplayNameFor(model => model.TeamID)
+            </th>
+        }}
         <th>
-            @Html.DisplayNameFor(model => model.TeamName)
+            Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.NumPlayers)
+            Count of Players
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        @{if (Session["LoggedIn"] != null)
+        {
+            <td>
+                @Html.DisplayFor(modelItem => item.TeamID)
+            </td>
+        }}
         <td>
             @Html.DisplayFor(modelItem => item.TeamName)
         </td>
@@ -34,10 +46,10 @@
             @{
             if (Session["LoggedIn"] != null)
             {
-                 @Html.ActionLink("Edit", "Edit", new { id = item.TeamID }) <text>|</text>
-                 @Html.ActionLink("Details", "Details", new { id = item.TeamID }) <text>|</text>
-                 @Html.ActionLink("Delete", "Delete", new { id = item.TeamID })
-}
+                @Html.ActionLink("Edit", "Edit", new { id = item.TeamID }) <text>|</text>
+                @Html.ActionLink("Details", "Details", new { id = item.TeamID }) <text>|</text>
+                @Html.ActionLink("Delete", "Delete", new { id = item.TeamID })
+        }
 
             }
         </td>
