Paged the players page and added more search parameters

--- a/eSportsTracker/Views/Players/Index.cshtml
+++ b/eSportsTracker/Views/Players/Index.cshtml
@@ -1,15 +1,17 @@
-﻿@model IEnumerable<eSportsTracker.Models.Player>
+﻿@model PagedList.IPagedList<eSportsTracker.Models.Player>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Players";
 }
 
-<h2>Index</h2>
+<h2>Players</h2>
 
 <p>
     @if (Session["LoggedIn"] != null)
     {
-    @Html.ActionLink("Create New", "Create")}
+        @Html.ActionLink("Create New", "Create")}
 </p>
 
 <form>
@@ -22,13 +24,13 @@
 <table class="table">
     <tr>
         @{if (Session["LoggedIn"] != null)
-        {
-            <th>
-                @Html.DisplayNameFor(model => model.PlayerID)
-            </th>
-        }}
+            {
+                <th>
+                    PlayerID
+                </th>
+            }}
         <th>
-            @Html.DisplayNameFor(model => model.Handle)
+            @Html.ActionLink("Handle", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
             Date of Birth
@@ -42,38 +44,44 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        @{if (Session["LoggedIn"] != null)
-        {
+    @foreach (var item in Model)
+    {
+        <tr>
+            @{if (Session["LoggedIn"] != null)
+                {
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PlayerID)
+                    </td>
+                }}
             <td>
-                @Html.DisplayFor(modelItem => item.PlayerID)
+                @Html.DisplayFor(modelItem => item.Handle)
             </td>
-        }}
-        <td>
-            @Html.DisplayFor(modelItem => item.Handle)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DOB)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LName)
-        </td>
-        <td>
-            @{
-            if (Session["LoggedIn"] != null)
-            {
-                @Html.ActionLink("Edit", "Edit", new { id = item.PlayerID }) <text>|</text>
-                @Html.ActionLink("Details", "Details", new { id = item.PlayerID }) <text>|</text>
-                @Html.ActionLink("Delete", "Delete", new { id = item.PlayerID })
-        }
+            <td>
+                @Html.DisplayFor(modelItem => item.DOB)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LName)
+            </td>
+            <td>
+                @{
+                    if (Session["LoggedIn"] != null)
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.PlayerID }) <text>|</text>
+                        @Html.ActionLink("Details", "Details", new { id = item.PlayerID }) <text>|</text>
+                        @Html.ActionLink("Delete", "Delete", new { id = item.PlayerID })
+                    }
 
-            }
-        </td>
-    </tr>
-}
+                }
+            </td>
+        </tr>
+    }
 
 </table>
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
