--- a/eSportsTracker/Views/Players/Index.cshtml
+++ b/eSportsTracker/Views/Players/Index.cshtml
@@ -16,7 +16,7 @@
 
 <form>
     <p>
-        Handle: <input type="text" name="SearchString">
+        Search: <input type="text" name="SearchString">
         <input type="submit" value="Filter" />
     </p>
 </form>
