--- a/eSportsTracker/Views/VideoGames/Index.cshtml
+++ b/eSportsTracker/Views/VideoGames/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<eSportsTracker.Models.VideoGame>
+﻿@model PagedList.IPagedList<eSportsTracker.Models.VideoGame>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "Index";
@@ -9,16 +11,16 @@
 <p>
     @if (Session["LoggedIn"] != null)
     {
-    @Html.ActionLink("Create New", "Create") }
+        @Html.ActionLink("Create New", "Create")}
 </p>
 <table class="table">
     <tr>
         @{if (Session["LoggedIn"] != null)
-        {
-            <th>
-                @Html.DisplayNameFor(model => model.GameID)
-            </th>
-        }}
+            {
+                <th>
+                    GameID
+                </th>
+            }}
         <th>
             Name
         </th>
@@ -26,50 +28,56 @@
             Release Date
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Genre)
+            Genre
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Developer)
+            Developer
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Publisher)
+            {Publisher
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        @{if (Session["LoggedIn"] != null)
-        {
+    @foreach (var item in Model)
+    {
+        <tr>
+            @{if (Session["LoggedIn"] != null)
+                {
+                    <td>
+                        @Html.DisplayFor(modelItem => item.GameID)
+                    </td>
+                }}
             <td>
-                @Html.DisplayFor(modelItem => item.GameID)
+                @Html.DisplayFor(modelItem => item.GameName)
             </td>
-        }}
-        <td>
-            @Html.DisplayFor(modelItem => item.GameName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Released)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Genre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Developer)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Publisher)
-        </td>
-        <td>
-            @{ if (Session["LoggedIn"] != null)
-            {
-                @Html.ActionLink("Edit", "Edit", new { id = item.GameID }) <text>|</text>
-                @Html.ActionLink("Details", "Details", new { id = item.GameID }) <text>|</text>
-                @Html.ActionLink("Delete", "Delete", new { id = item.GameID })
-        }
-            }
-        </td>
-    </tr>
-}
+            <td>
+                @Html.DisplayFor(modelItem => item.Released)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Genre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Developer)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Publisher)
+            </td>
+            <td>
+                @{ if (Session["LoggedIn"] != null)
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.GameID }) <text>|</text>
+                        @Html.ActionLink("Details", "Details", new { id = item.GameID }) <text>|</text>
+                        @Html.ActionLink("Delete", "Delete", new { id = item.GameID })
+                    }
+                }
+            </td>
+        </tr>
+    }
 
 </table>
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
