Added two separate views for adding team and solo matches.

--- a/eSportsTracker/Views/Matches/Index.cshtml
+++ b/eSportsTracker/Views/Matches/Index.cshtml
@@ -11,7 +11,12 @@
 <p>
     @if (Session["LoggedIn"] != null)
     {
-        @Html.ActionLink("Create New", "Create")}
+        @Html.ActionLink("Create Team Match", "Create", "TeamMatches", new { }, null)
+        <br />
+        @Html.ActionLink("Create Solo Match", "Create", "SoloMatches", new { }, null)
+        <br />
+        @Html.ActionLink("Create Generic Match", "Create")
+    }
 </p>
 
 <form>
