Fixed match buttons on index page

--- a/eSportsTracker/Views/Matches/Index.cshtml
+++ b/eSportsTracker/Views/Matches/Index.cshtml
@@ -13,10 +13,8 @@
     {
         @Html.ActionLink("Create Team Match", "Create", "TeamMatches", new { }, null)
         <br />
-        @Html.ActionLink("Create Solo Match", "Create", "SoloMatches", new { }, null)
-        <br />
-        @Html.ActionLink("Create Generic Match", "Create")
-    }
+        @Html.ActionLink("Create Solo Match", "Create")
+      }
 </p>
 
 <form>
