--- a/eSportsTracker/Views/Players/Index.cshtml
+++ b/eSportsTracker/Views/Players/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<eSportsTracker.Models.Player>
+﻿@model PagedList.IPagedList<eSportsTracker.Models.PlayerWithWin>
 @using PagedList.Mvc;
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
@@ -41,42 +41,53 @@
         <th>
             Last Name
         </th>
-        <th></th>
+        <th>
+            Wins
+        </th>
+        <th>
+            Games Played
+        </th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            @{if (Session["LoggedIn"] != null)
+    <tr>
+        @{if (Session["LoggedIn"] != null)
+            {
+                <td>
+                    @Html.DisplayFor(modelItem => item.PlayerID)
+                </td>
+            }}
+        <td>
+            @Html.DisplayFor(modelItem => item.Handle)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DOB)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Wins)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.GamesPlayed)
+        </td>
+        <td>
+            @{
+                if (Session["LoggedIn"] != null)
                 {
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PlayerID)
-                    </td>
-                }}
-            <td>
-                @Html.DisplayFor(modelItem => item.Handle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DOB)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LName)
-            </td>
-            <td>
-                @{
-                    if (Session["LoggedIn"] != null)
-                    {
-                        @Html.ActionLink("Edit", "Edit", new { id = item.PlayerID }) <text>|</text>
-                        @Html.ActionLink("Details", "Details", new { id = item.PlayerID }) <text>|</text>
-                        @Html.ActionLink("Delete", "Delete", new { id = item.PlayerID })
-                    }
-
+                    @Html.ActionLink("Edit", "Edit", new { id = item.PlayerID }) <text>|</text>
+                    @Html.ActionLink("Details", "Details", new { id = item.PlayerID }) <text>|</text>
+                    @Html.ActionLink("Delete", "Delete", new { id = item.PlayerID })
                 }
-            </td>
-        </tr>
+
+            }
+        </td>
+    </tr>
     }
 
 </table>
