--- a/eSportsTracker/Views/Players/Index.cshtml
+++ b/eSportsTracker/Views/Players/Index.cshtml
@@ -51,43 +51,43 @@
 
     @foreach (var item in Model)
     {
-    <tr>
-        @{if (Session["LoggedIn"] != null)
-            {
-                <td>
-                    @Html.DisplayFor(modelItem => item.PlayerID)
-                </td>
-            }}
-        <td>
-            @Html.DisplayFor(modelItem => item.Handle)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DOB)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Wins)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.GamesPlayed)
-        </td>
-        <td>
-            @{
-                if (Session["LoggedIn"] != null)
+        <tr>
+            @{if (Session["LoggedIn"] != null)
                 {
-                    @Html.ActionLink("Edit", "Edit", new { id = item.PlayerID }) <text>|</text>
-                    @Html.ActionLink("Details", "Details", new { id = item.PlayerID }) <text>|</text>
-                    @Html.ActionLink("Delete", "Delete", new { id = item.PlayerID })
-                }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PlayerID)
+                    </td>
+                }}
+            <td>
+                @Html.DisplayFor(modelItem => item.Handle)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DOB)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Wins)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.GamesPlayed)
+            </td>
+            <td>
+                @{
+                    if (Session["LoggedIn"] != null)
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.PlayerID }) <text>|</text>
+                        @Html.ActionLink("Details", "Details", new { id = item.PlayerID }) <text>|</text>
+                        @Html.ActionLink("Delete", "Delete", new { id = item.PlayerID })
+                    }
 
-            }
-        </td>
-    </tr>
+                }
+            </td>
+        </tr>
     }
 
 </table>
@@ -96,3 +96,6 @@ Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.Page
 
 @Html.PagedListPager(Model, page => Url.Action("Index",
     new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+
+<br />
+@Html.ActionLink("Players By Game", "PlayersByGame", new { })
