added ability to sort players by their number of wins

--- a/eSportsTracker/Views/Players/Index.cshtml
+++ b/eSportsTracker/Views/Players/Index.cshtml
@@ -42,7 +42,7 @@
             Last Name
         </th>
         <th>
-            Wins
+            @Html.ActionLink("Wins", "Index", new { sortOrder = "wins" })
         </th>
         <th>
             Games Played
