--- a/eSportsTracker/Views/Matches/Details.cshtml
+++ b/eSportsTracker/Views/Matches/Details.cshtml
@@ -25,13 +25,32 @@
             @ViewBag.winnerN
         </dd>
     </dl>
-    @foreach (var m in Model) {
-        if (m.Player.Equals(ViewBag.winnerN)) {
+    @foreach (var m in Model)
+    {
+        if (m.Player.Equals(ViewBag.winnerN))
+        {
             <p>
                 @m.Name <text>: </text> @m.ValueOf
             </p>
         }
     }
+    @if (Session["LoggedIn"] != null)
+    {
+        <h>
+            Add statistic:
+        </h>
+        <form>
+            <p>
+                name: <input type="text" name="nameStringW">
+            </p>
+            <p>
+                value: <input type="text" name="valueStringW">
+            </p>
+            <input type="submit" value="Add">
+        </form>
+    }
+
+
 </div>
 <div>
     <dl class="dl-horizontal">
@@ -50,6 +69,21 @@
                 @m.Name <text>: </text> @m.ValueOf
             </p>
         }
+    }
+    @if (Session["LoggedIn"] != null)
+    {
+        <h>
+            Add statistic:
+        </h>
+        <form>
+            <p>
+                name: <input type="text" name="nameStringL">
+            </p>
+            <p>
+                value: <input type="text" name="valueStringL">
+            </p>
+            <input type="submit" value="Add">
+        </form>
     }
 </div>
 
